[tool.poetry]
name = "repl_nix_nn"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
nnfs = "^0.5.1"
pyproject = "^1.3.1"
debugpy = "^1.6.7"
python-lsp-server = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
